content/_generated-doc/3.0/config/quarkus-smallrye-jwt-auth-small-rye-jwt-config.adoc

:summaryTableId: quarkus-smallrye-jwt-auth-small-rye-jwt-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-jwt-auth-small-rye-jwt-config_configuration]]link:#quarkus-smallrye-jwt-auth-small-rye-jwt-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-smallrye-jwt-auth-small-rye-jwt-config_quarkus.smallrye-jwt.blocking-authentication]]`link:#quarkus-smallrye-jwt-auth-small-rye-jwt-config_quarkus.smallrye-jwt.blocking-authentication[quarkus.smallrye-jwt.blocking-authentication]`

[.description]
--
Enable this property if fetching the remote keys can be a time-consuming operation. Do not enable it if you use the local keys.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_JWT_BLOCKING_AUTHENTICATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_JWT_BLOCKING_AUTHENTICATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===