content/_generated-doc/3.2/config/quarkus-smallrye-jwt-auth-small-rye-jwt-config.adoc

:summaryTableId: quarkus-smallrye-jwt-auth-small-rye-jwt-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-jwt-auth-small-rye-jwt-config_configuration]]link:#quarkus-smallrye-jwt-auth-small-rye-jwt-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-smallrye-jwt-auth-small-rye-jwt-config_quarkus-smallrye-jwt-blocking-authentication]]`link:#quarkus-smallrye-jwt-auth-small-rye-jwt-config_quarkus-smallrye-jwt-blocking-authentication[quarkus.smallrye-jwt.blocking-authentication]`


[.description]
--
Enable this property if fetching the remote keys can be a time-consuming operation. Do not enable it if you use the local keys.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_JWT_BLOCKING_AUTHENTICATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_JWT_BLOCKING_AUTHENTICATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-smallrye-jwt-auth-small-rye-jwt-config_quarkus-smallrye-jwt-silent]]`link:#quarkus-smallrye-jwt-auth-small-rye-jwt-config_quarkus-smallrye-jwt-silent[quarkus.smallrye-jwt.silent]`


[.description]
--
Always create HTTP 401 challenge, even for requests containing no authentication credentials. JWT authentication mechanism will return HTTP 401 when an authentication challenge is required. However if it is used alongside one of the interactive authentication mechanisms then returning HTTP 401 to the users accessing the application from a browser may not be desired. If you prefer you can request that JWT authentication mechanism does not create a challenge in such cases by setting this property to 'true'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SMALLRYE_JWT_SILENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SMALLRYE_JWT_SILENT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===